style.css
/* ... */
p{
    font-family: "UniqueDistrictThin";
    font-size: 17px;
    font-weight: lighter;
    color: white;
    width: 50%;
    margin-left: 25%;
    margin-top: 0px;
    margin-bottom: 30px;
    text-align: justify;
    transition: all 0.5s;
}

li{
    font-family: "UniqueDistrictThin";
    font-size: 18px;
    font-weight: lighter;
    letter-spacing: 1px;
    color: white;
    width: 46%;
    margin-left: 27%;
    margin-top: 0px;
    margin-bottom: 20px;
    text-align: justify;
    transition: all 0.5s;
}

.tab{
    width: 20%;
    height: 40px;
    transition: all 0.5s;

}

.body-background{
    background: #171717;
    position: relative;
    box-shadow: 0px 0px 50px;
    transition: all 0.5s;

}

.nav {
    position: fixed;
    width: 100%;
    height: 40px;
    background: #0f0f0f;
    box-shadow: 0px 0px 50px;
    z-index: 99;
    transition: all 0.5s;

}

.nav > .tab > a{
    position: relative;
    font-family: "UniqueDistrictThin";
    font-size: 15px;
    font-weight: lighter;
    color: white;
    text-align: center;
    text-decoration: none;
    z-index: 2;
    transition: all 0.5s;

}

.top-icon {
    display: none;
}

.tab:hover .top-icon{
    display: block;
    position: relative;
    float: left;
    display: block;
    width: 16px;
    height: 16px;
    left: calc(50% - 8px);
    top: calc(50% - 8px);
    animation: positionShift 0.5s;
    animation-fill-mode: forwards;
}

@keyframes positionShift {
    0% {
        opacity: 0;
        left: 49%;
    }

    100% {
        opacity: 1;
        left: 43%;
    }
}

#home-icon:hover a{
    color: #00FFFF;
    margin-left: 25px;
}

#home-icon:hover .top-icon{
    content:url("assets/home-icon-color.png");
}

#skills-icon:hover a{
    color: #00FF00;
    margin-left: 21px;
}

#skills-icon:hover .top-icon{
    content:url("assets/skills-icon-color.png");
}

#projects-icon:hover a{
    color: #f956ff;
    margin-left: 36px;
}

#projects-icon:hover .top-icon{
    content:url("assets/projects-icon-color.png");
}

.experience-icon img{
    height: 50px;
    margin-left: 30px;
    position: absolute;
    opacity: 0.5;
    transition: all 1s;
}

.experience-icon:before {
    content: '';
    position: absolute;
    float: left;
    width: 0;
    height: 0;
    transform: translate(-8%, -15px);
    background: transparent;
    background-image: url(assets/tab-backgrounds/extras-blur.jpg);
    background-attachment: fixed;
    background-size: 100%;
    background-position: center;
    opacity: 0;
    border: 0.5px solid transparent;
    border-left-width: 5px;
}

#edu1.experience-icon:before {
    background-image: url(assets/experience-icons/bgs/edu1.png);
}

#edu2.experience-icon:before {
    background-image: url(assets/experience-icons/bgs/edu2.png);
}

#wrk1.experience-icon:before {
    background-image: url(assets/experience-icons/bgs/wrk1.png);
}

#wrk2.experience-icon:before {
    background-image: url(assets/experience-icons/bgs/wrk2.png);
}

#wrk3.experience-icon:before {
    background-image: url(assets/experience-icons/bgs/wrk3.png);
}

#wrk4.experience-icon:before {
    background-image: url(assets/experience-icons/bgs/wrk4.png);
}

#wrk5.experience-icon:before {
    background-image: url(assets/experience-icons/bgs/wrk5.png);
}

#wrk6.experience-icon:before {
    background-image: url(assets/experience-icons/bgs/wrk6.png);
}

#ldr1.experience-icon:before {
    background-image: url(assets/experience-icons/bgs/ldr1.png);
}

#ldr2.experience-icon:before {
    background-image: url(assets/experience-icons/bgs/ldr2.png);
}

#ldr3.experience-icon:before {
    background-image: url(assets/experience-icons/bgs/ldr3.png);
}

#ldr4.experience-icon:before {
    background-image: url(assets/experience-icons/bgs/ldr4.png);
}

#ldr5.experience-icon:before {
    background-image: url(assets/experience-icons/bgs/ldr5.png);
}

.experience-icon:hover:before {

    animation: bord-animation-front 0.8s forwards;

}

@keyframes bord-animation-front {
    0%
    {
        width: 0;
        height: 0;
        transform: translate(-50%, -15px);
        border-top-color: transparent;
        border-right-color: transparent;
        border-bottom-color: transparent;
        border-left-color: white;
        opacity: 1;
    }

    40%
    {
        width: 0;
        height: 80px;
        transform: translate(-20%, -15px);
        border-top-color: transparent;
        border-right-color: transparent;
        border-bottom-color: transparent;
        border-left-color: white;
        opacity: 1;
    }

    100%
    {
        width: 64%;
        height: 80px;
        transform: translate(-8%, -15px);
        border-top-color: white;
        border-right-color: white;
        border-bottom-color: white;
        border-left-color: white;
        opacity: 1;
    }
}

.experience-icon:hover {
    background: #191919;
}

#experience-icon:hover a{
    color: #ff812d;
    margin-left: 55px;
}

#experience-icon:hover .top-icon{
    content:url("assets/experience-icon-color.png");
}

#contact-icon:hover a{
    color: #FFFF00;
    margin-left: 35px;
}

#contact-icon:hover .top-icon{
    content:url("assets/contact-icon-color.png");
}

.tab{
    width: calc(20% - 2px);
    height: 100%;
    text-align: center;
    line-height: 40px;
    float: left;
    transition: all 0.5s;
}

.tab:hover{
    background: #282828;
    transition: all 0.5s;
}

.nav-bottom{
    position: relative;
    width: 100%;
    height: 40px;
    background: #0f0f0f;
    box-shadow: 0px 0px 50px;
    z-index: 1;
    transition: all 0.5s;

}

.bottom-tab{
    position: relative;
    width: calc(20% - 10px);
    height: 100%;
    text-align: center;
    line-height: 40px;
    float: left;
    transition: all 0.5s;
}

.bottom-tab:hover{
    background: #333333;
    transition: all 0.5s;
}
/* ... */

